# DAMNIT-web

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FLOW.md  HZDR-INTEGRATION.md  LICENSE  PR_NOTES.md  README.md  compose.yaml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js  vite.config.ts
api/: .env.example  .env.exfel.example  .env.hzdr.example  .env.pilot.example  .env.production.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  compose.test.yml  compose.yml  mkdocs.yml  pyproject.toml  ruff.toml  tach.toml  zensical.toml
api/docs/: .nav.yaml  architecture.md  ci-cd.md  deployment.md  development.md  hzdr.md  index.md  notes.md  security.md  setup.md
api/docs/adr/: 000-vertical-slice-architecture.md  001-error-classes.md  002-no-global-mutable-state.md  003-injected-settings.md  004-proposal-path-locator.md  005-repository-pattern.md  006-litestar.md  007-graphql-transport-only.md  008-local-mode-composition.md  009-channels-subscriptions.md  010-two-databases.md  011-authorisation-at-the-edge.md  README.md
api/docs/adr/.templates/: adr-template-minimal.md  adr-template.md
api/docs/dev/: ci-cd.md  docs.md  setup.md
api/examples/: Example_Campaign_06.2026.light.sqlite  laserdata-event.example.json  normalized-event.example.json  watchdog-event.example.json
api/scripts/: damnit-api-deploy.ps1  damnit-api-deploy.sh  damnit-api-dev.ps1  gen_api_docs.py  generate-hzdr-example.py  hzdr-dev.ps1  hzdr-hdf5-builder.py  hzdr-local-acceptance.py  hzdr-package-emulator.py  inspect-hzdr-hdf5.py  publish-hzdr-catalog.py  regen_hzdr_event_fixtures.py  reproduce-read-lock.py  verify-hzdr-watchdog.py
api/src/cammille_api/: db.py  main.py
api/src/cammille_api/graphql/: bootstrap.py  queries.py
api/src/damnit_api/: __init__.py  _logging.py  auth.py  const.py  data.py  db.py  logging.py  main.py  models.py  settings.py  state.py  utils.py
api/src/damnit_api/_db/: __init__.py  bootstrap.py  dependencies.py  models.py
api/src/damnit_api/_mymdc/: __init__.py  bootstrap.py  clients.py  dependencies.py  models.py  ports.py  settings.py
api/src/damnit_api/acl/: __init__.py  models.py
api/src/damnit_api/auth/: __init__.py  bootstrap.py  dependencies.py  gql.py  ldap.py  models.py  oauth.py  permissions.py  policy.py  proposals.py  routers.py  services.py  token_store.py
api/src/damnit_api/base/: exceptions.py  models.py
api/src/damnit_api/consumer/: __init__.py  asapo.py  bootstrap.py  builder_trigger.py  kafka.py  spool.py
api/src/damnit_api/contextfile/: __init__.py  models.py  mtime_cache.py  routers.py
api/src/damnit_api/filewatcher/: cache.py  file_watcher.py  mtime_cache.py  routers.py  utils.py
api/src/damnit_api/graphql/: __init__.py  bootstrap.py  dependencies.py  directives.py  metadata.py  models.py  mutations.py  publisher.py  queries.py  router.py  schema.py  subscriptions.py  utils.py
api/src/damnit_api/instance/: models.py  repositories.py  routers.py  services.py
api/src/damnit_api/metadata/: __init__.py  gql.py  hzdr_event.py  hzdr_nexus.py  hzdr_routers.py  hzdr_sources.py  labfrog_sqlite.py  models.py  mymdc.py  producer_status.py  proposals.py  repository.py  routers.py  scicat.py  services.py
api/src/damnit_api/metadata/mymdc/: clients.py
api/src/damnit_api/runs/: dependencies.py  models.py  preview.py  repository.py  serialization.py  types.py
api/src/damnit_api/runs/csv/: __init__.py  repository.py
api/src/damnit_api/runs/sqlite/: __init__.py  dependencies.py  repository.py  session.py
api/src/damnit_api/shared/: const.py  errors.py  flow_activity.py  gql.py  hzdr_settings.py  middlewares.py  models.py  permissions.py  routers.py  settings.py
api/tests/: conftest.py  test_auth_modes.py  test_auth_policy.py  test_auth_routers.py  test_contextfile.py  test_data.py  test_db.py  test_editor.py  test_errors.py  test_hzdr_asapo_externalization.py  test_hzdr_broker_roundtrip.py  test_hzdr_builder_trigger.py  test_hzdr_catalog_publisher.py  test_hzdr_config.py  test_hzdr_consumer_bootstrap.py  test_hzdr_event.py  test_hzdr_flow_activity.py  test_hzdr_integration.py  test_hzdr_kafka_spool.py  test_hzdr_labfrog_sqlite.py  test_hzdr_nexus.py  test_hzdr_nexus_sample.py  test_hzdr_package_emulator.py  test_hzdr_producer_status.py  test_hzdr_review.py  test_hzdr_saved_views.py  test_hzdr_scicat.py  test_hzdr_sources.py  test_hzdr_spool.py  test_hzdr_wiki.py  test_metadata_keys.py  test_metadata_services.py  test_models.py  test_runtime_config.py  test_state.py
api/tests/fixtures/: hzdr-event-v1.sample.json  hzdr-event-v1.schema.json
api/tests/graphql/: conftest.py  const.py  test_models.py  test_mutations.py  test_permissions.py  test_publisher.py  test_queries.py  test_request_context.py  test_subscriptions.py  test_utils.py  utils.py
api/tests/graphql/fixtures/: run_variables.csv  runs.csv  variables.csv
api/tests/mock/: _mymdc.json
api/tests/mock/data/: .gitignore
api/tests/mock/data/gpfs/exfel/exp/MID/202401/p006996/usr/Shared/amore/: make_runs_db.py
api/tests/mock/data/p6996/: make_runs_db.py  runs.sqlite
api/tests/mock/mymdc/: identity_map.py  mymdc.yaml  record.py  test_mock_client.py
api/tests/refactor/: conftest.py  test_gql_parity.py
api/tests/refactor/e2e/: conftest.py  test_auth_surface_parity.py  test_authz_parity.py  test_data_parity.py
api/tests/refactor/e2e/__snapshots__/: test_data_parity.ambr
api/tests/refactor/e2e/cassettes/test_data_parity/: test_get_user_proposals_wire_shape_unchanged.yaml
api/tests/refactor/snapshots/: schema.graphql
api/tests/runs/: test_preview.py
api/tests/runs/csv/: test_repository.py
api/tests/runs/sqlite/: test_repository.py  test_session.py
docs/: README.md  alignment-implementation-plan.md  architecture.md  deployment-plan.md  event-schema.md  handoff.md  integration-roadmap.md  local-development.md  mediawiki-integration.md  nxhzdr-target-profile.md  protocol-status.md  testing.md  (+8 more)
(+924 files in other folders)
