[project]
name = "DAMNIT-web"
version = "0.1.0"
description = "Monorepo for serving DAMNIT data over the web"
authors = [{ name = "European XFEL", email = "da@xfel.eu" }]
requires-python = "~=3.13.0"
readme = "README.md"
maintainers = [
    { name = "Cammille Carinan", email = "cammille.carinan@xfel.eu" },
    { name = "Robert Rosca", email = "robert.rosca@xfel.eu" },
    { name = "Kristin Tippey", email = "k.tippey@hzdr.de" },
]
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5",
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.11",
    # Coverage for the aggregate HZDR map written by scripts/test-all.ps1.
    "pytest-cov>=7.0.0",
    "coverage>=7.0.0",
    "ruff>=0.7",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.workspace]
members = ["api"]
