[tool.poetry]
name = "DAMNIT-web API"
version = "0.1.0"
description = ""
authors = ["European XFEL <da@xfel.eu>"]
maintainers = [
  "Cammille Carinan <cammille.carinan@xfel.eu>",
  "Robert Rosca <robert.rosca@xfel.eu>"
]
readme = "README.md"
packages = [{ include = "damnit_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
fastapi = "^0.104"
orjson = "^3.8.13"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
h5py = "^3.9.0"
strawberry-graphql = { extras = ["fastapi"], version = "^0.195.2" }
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiosqlite = "^0.19.0"
scipy = "^1.11.4"
authlib = "^1.3.0"
itsdangerous = "^2.1.2"
httpx = "^0.27.0"
pydantic = "^2"
pydantic-settings = "^2.2.1"
async-lru = "^2.0.4"
ldap3 = "^2.9.1"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"

[tool.poetry.group.dev.dependencies]
strawberry-graphql = { extras = ["debug-server", "fastapi"], version = "^0.195.2" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
