[project]
name = "damnit-api"
version = "0.1.1"
description = ""
authors = [{ name = "European XFEL", email = "da@xfel.eu" }]
requires-python = "~=3.12.0"
readme = "README.md"
maintainers = [
    { name = "Cammille Carinan", email = "cammille.carinan@xfel.eu" },
    { name = "Robert Rosca", email = "robert.rosca@xfel.eu" },
]
dependencies = [
    "pandas>=2.0.1,<3",
    "sqlalchemy[asyncio]>=2.0.19,<3",
    "fastapi>=0.115.13,<0.116",
    "orjson>=3.8.13,<4",
    "numpy>=1.25.0,<2",
    "matplotlib>=3.7.1,<4",
    "h5py>=3.9.0,<4",
    "strawberry-graphql[fastapi]>=0.195.2,<0.196",
    "uvicorn[standard]>=0.29.0,<0.30",
    "aiosqlite>=0.19.0,<0.20",
    "scipy>=1.11.4,<2",
    "authlib>=1.3.0,<2",
    "itsdangerous>=2.1.2,<3",
    "httpx>=0.27.0,<0.28",
    "pydantic>=2,<3",
    "pydantic-settings>=2.2.1,<3",
    "async-lru>=2.0.4,<3",
    "ldap3>=2.9.1,<3",
    "requests>=2.32.3,<3",
    "structlog>=24.4.0,<25",
    "colorama>=0.4.6,<0.5",
    "xarray>=2024.11.0,<2025",
    "damnit>=0.1.4,<0.2",
    "aiohttp>=3.11.11,<4",
    "aiofiles>=24.1.0,<25",
]

[dependency-groups]
test = [
    "pytest>=7.4.2,<8",
    "pytest-asyncio>=0.21.1,<0.22",
    "pytest-mock>=3.11.1,<4",
]
dev = ["strawberry-graphql[debug-server, fastapi]>=0.195.2,<0.196"]
lint = ["ruff>=0.7.1,<0.8", "pyright>=1.1.386,<2"]

[tool.uv]
default-groups = ["test", "dev", "lint"]

[tool.hatch.build.targets.sdist]
include = ["src/damnit_api"]

[tool.hatch.build.targets.wheel]
include = ["src/damnit_api"]

[tool.hatch.build.targets.wheel.sources]
"src/damnit_api" = "damnit_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
