[project]
name = "damnit-api"
version = "0.1.1"
description = ""
authors = [{ name = "European XFEL", email = "da@xfel.eu" }]
requires-python = "~=3.13.0"
readme = "README.md"
maintainers = [
    { name = "Cammille Carinan", email = "cammille.carinan@xfel.eu" },
    { name = "Robert Rosca", email = "robert.rosca@xfel.eu" },
]
dependencies = [
    "pandas~=2.0",
    "sqlalchemy[asyncio]~=2.0",
    "fastapi~=0.115",
    "orjson~=3.8",
    "numpy~=2.3",
    "matplotlib~=3.7",
    "h5py~=3.9",
    "strawberry-graphql[fastapi]~=0.195",
    "uvicorn[standard]~=0.29",
    "aiosqlite~=0.19",
    "scipy~=1.11",
    "authlib~=1.3",
    "itsdangerous~=2.1",
    "httpx~=0.27",
    "pydantic~=2.12",
    "pydantic-settings~=2.2",
    "async-lru~=2.0",
    "ldap3~=2.9",
    "requests~=2.32",
    "structlog~=24.4",
    "colorama~=0.4",
    "xarray>=2024.11",                    # uses datever
    "damnit>=0.1",
    "aiohttp~=3.11",
    "aiofiles>=24.1.0",
    "anyio>=4.11.0",
]

[dependency-groups]
test = ["pytest~=7.4", "pytest-asyncio~=0.21", "pytest-mock~=3.11"]
lint = ["pyright>=1.1.406", "ruff>=0.7"]
dev = [
    "strawberry-graphql[debug-server, fastapi]~=0.195",
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.uv]
default-groups = []

[tool.hatch.build.targets.sdist]
include = ["src/damnit_api"]

[tool.hatch.build.targets.wheel]
include = ["src/damnit_api"]

[tool.hatch.build.targets.wheel.sources]
"src/damnit_api" = "damnit_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
